# tidalite

./: .gitignore  README.md  pyproject.toml
tidalite/: api.py  auth.py  config.py  main.py  models.py  player.py
tidalite/tui/: app.py  components.py  main.py  theme.py  views.py
