[tool.poetry]
name = "tidalite"
version = "0.1.0"
description = "a tui for tidal"
authors = ["Milan Oterin <me@otter.llc>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
rich = ">=12.0.0"
typer = {extras = ["rich"], version = ">=0.4.1"}
httpx = {extras = ["http2"], version = ">=0.22.0"}
pydantic = ">=1.9.0"
sounddevice = ">=0.4.4"
soundfile = ">=0.11.0"

[tool.poetry.scripts]
tidalite = "tidalite.main:app"

[build-system]
requires = ["poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
