[project]
name = "tidalite"
version = "0.2.0"
description = "terminal cli for tidal music streaming"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="tidalite dev"}]
license = {text="MIT"}

[project.scripts]
tidalite = "tidalite.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
rich = "^13.7.0"
httpx = {version="^0.27.0", extras=["http2"]}
pydantic = "^2.6.4"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
